compile_log.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
C:\Users\LuissxD\AndroidStudioProjects\GoRide\app\src\main\java\com\example\goride\modelo\dao\UsuarioDao.java:1: error: illegal character: '\ufeff'
﻿package com.example.goride.modelo.dao;
^
C:\Users\LuissxD\AndroidStudioProjects\GoRide\app\src\main\java\com\example\goride\modelo\dao\UsuarioDao.java:1: error: class, interface, or enum expected
﻿package com.example.goride.modelo.dao;
         ^
C:\Users\LuissxD\AndroidStudioProjects\GoRide\app\src\main\java\com\example\goride\modelo\dao\UsuarioDao.java:2: error: class, interface, or enum expected
import androidx.room.Dao;
^
C:\Users\LuissxD\AndroidStudioProjects\GoRide\app\src\main\java\com\example\goride\modelo\dao\UsuarioDao.java:3: error: class, interface, or enum expected
import androidx.room.Delete;
^
C:\Users\LuissxD\AndroidStudioProjects\GoRide\app\src\main\java\com\example\goride\modelo\dao\UsuarioDao.java:4: error: class, interface, or enum expected
import androidx.room.Insert;
^
C:\Users\LuissxD\AndroidStudioProjects\GoRide\app\src\main\java\com\example\goride\modelo\dao\UsuarioDao.java:5: error: class, interface, or enum expected
import androidx.room.Query;
^
C:\Users\LuissxD\AndroidStudioProjects\GoRide\app\src\main\java\com\example\goride\modelo\dao\UsuarioDao.java:6: error: class, interface, or enum expected
import androidx.room.Update;
^
C:\Users\LuissxD\AndroidStudioProjects\GoRide\app\src\main\java\com\example\goride\modelo\dao\UsuarioDao.java:7: error: class, interface, or enum expected
import com.example.goride.modelo.entidades.Usuario;
^
C:\Users\LuissxD\AndroidStudioProjects\GoRide\app\src\main\java\com\example\goride\modelo\dao\UsuarioDao.java:8: error: class, interface, or enum expected
import java.util.List;
^
C:\Users\LuissxD\AndroidStudioProjects\GoRide\app\src\main\java\com\example\goride\modelo\repositorio\RepositorioUsuario.java:1: error: illegal character: '\ufeff'
﻿package com.example.goride.modelo.repositorio;
^
C:\Users\LuissxD\AndroidStudioProjects\GoRide\app\src\main\java\com\example\goride\modelo\repositorio\RepositorioUsuario.java:1: error: class, interface, or enum expected
﻿package com.example.goride.modelo.repositorio;
         ^
C:\Users\LuissxD\AndroidStudioProjects\GoRide\app\src\main\java\com\example\goride\modelo\repositorio\RepositorioUsuario.java:2: error: class, interface, or enum expected
import android.content.Context;
^
C:\Users\LuissxD\AndroidStudioProjects\GoRide\app\src\main\java\com\example\goride\modelo\repositorio\RepositorioUsuario.java:3: error: class, interface, or enum expected
import com.example.goride.modelo.basedatos.BaseDatosGoRide;
^
C:\Users\LuissxD\AndroidStudioProjects\GoRide\app\src\main\java\com\example\goride\modelo\repositorio\RepositorioUsuario.java:4: error: class, interface, or enum expected
import com.example.goride.modelo.dao.UsuarioDao;
^
C:\Users\LuissxD\AndroidStudioProjects\GoRide\app\src\main\java\com\example\goride\modelo\repositorio\RepositorioUsuario.java:5: error: class, interface, or enum expected
import com.example.goride.modelo.entidades.Usuario;
^
C:\Users\LuissxD\AndroidStudioProjects\GoRide\app\src\main\java\com\example\goride\modelo\repositorio\RepositorioUsuario.java:6: error: class, interface, or enum expected
import java.util.List;
^
C:\Users\LuissxD\AndroidStudioProjects\GoRide\app\src\main\java\com\example\goride\modelo\utilidades\UtilidadesFecha.java:1: error: illegal character: '\ufeff'
﻿package com.example.goride.modelo.utilidades;
^
C:\Users\LuissxD\AndroidStudioProjects\GoRide\app\src\main\java\com\example\goride\modelo\utilidades\UtilidadesFecha.java:1: error: class, interface, or enum expected
﻿package com.example.goride.modelo.utilidades;
         ^
C:\Users\LuissxD\AndroidStudioProjects\GoRide\app\src\main\java\com\example\goride\modelo\utilidades\UtilidadesFecha.java:2: error: class, interface, or enum expected
import java.text.SimpleDateFormat;
^
C:\Users\LuissxD\AndroidStudioProjects\GoRide\app\src\main\java\com\example\goride\modelo\utilidades\UtilidadesFecha.java:3: error: class, interface, or enum expected
import java.util.Date;
^
C:\Users\LuissxD\AndroidStudioProjects\GoRide\app\src\main\java\com\example\goride\modelo\utilidades\UtilidadesFecha.java:4: error: class, interface, or enum expected
import java.util.Locale;
^
21 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 2s
15 actionable tasks: 1 executed, 14 up-to-date
